--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 
 <head>
 
-  <title>Jonathan Doe | Web Designer, Director | name@yourdomain.com</title>
+  <title>路已人</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
   <meta name="keywords" content="" />
   <meta name="description" content="" />
-
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" type="text/css" href="reset-fonts-grids.css" media="all" />
   <link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
+  <script type="text/javascript" src="https://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
+  <script type="text/javascript">
+    $webfont.load("body", "a6fe94de39b74d618526efeca666611e", "HanaMin");
+    /*$webfont.load("#id1,.class1,h1", "a6fe94de39b74d618526efeca666611e", "HanaMin");*/
+    /*．．．*/
+    $webfont.draw();
+  </script>
 </head>
 
 <body>
@@ -22,15 +29,15 @@
       <div id="hd">
         <div class="yui-gc">
           <div class="yui-u first">
-            <h1>Jonathan Doe</h1>
-            <h2>Web Designer, Director</h2>
+            <h1>路已人</h1>
+            <h2>数学，算法，代码</h2>
           </div>
 
           <div class="yui-u">
             <div class="contact-info">
-              <h3><a id="pdf" href="#">Download PDF</a></h3>
-              <h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-              <h3>(313) - 867-5309</h3>
+              <h3><a href="https://cv.yiren.lu">cv.yiren.lu</a></h3>
+              <h3><a href="mailto:luyiren12@bupt.edu.cn">luyiren12@bupt.edu.cn</a></h3>
+              <h3>(86) 132-5600-3733</h3>
             </div>
             <!--// .contact-info -->
           </div>
@@ -45,12 +52,11 @@
 
             <div class="yui-gf">
               <div class="yui-u first">
-                <h2>Profile</h2>
+                <h2>简介</h2>
               </div>
               <div class="yui-u">
                 <p class="enlarge">
-                  Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize
-                  tactical initiatives before cross-media catalysts for change.
+                  北京邮电大学计科大四在读
                 </p>
               </div>
             </div>
@@ -58,119 +64,104 @@
 
             <div class="yui-gf">
               <div class="yui-u first">
-                <h2>Skills</h2>
+                <h2>经历</h2>
               </div>
               <div class="yui-u">
-
-                <div class="talent">
-                  <h2>Web Design</h2>
-                  <p>Assertively exploit wireless initiatives rather than synergistic core competencies. </p>
-                </div>
-
-                <div class="talent">
-                  <h2>Interface Design</h2>
-                  <p>Credibly streamline mission-critical value with multifunctional functionalities. </p>
-                </div>
-
-                <div class="talent">
-                  <h2>Project Direction</h2>
-                  <p>Proven ability to lead and manage a wide variety of design and development projects in team and
-                    independent situations.</p>
-                </div>
-              </div>
-            </div>
-            <!--// .yui-gf -->
-
-            <div class="yui-gf">
-              <div class="yui-u first">
-                <h2>Technical</h2>
-              </div>
-              <div class="yui-u">
-                <ul class="talent">
-                  <li>XHTML</li>
-                  <li>CSS</li>
-                  <li class="last">Javascript</li>
-                </ul>
-
-                <ul class="talent">
-                  <li>Jquery</li>
-                  <li>PHP</li>
-                  <li class="last">CVS / Subversion</li>
-                </ul>
-
-                <ul class="talent">
-                  <li>OS X</li>
-                  <li>Windows XP/Vista</li>
-                  <li class="last">Linux</li>
-                </ul>
-              </div>
-            </div>
-            <!--// .yui-gf-->
-
-            <div class="yui-gf">
-
-              <div class="yui-u first">
-                <h2>Experience</h2>
-              </div>
-              <!--// .yui-u -->
-
-              <div class="yui-u">
-
                 <div class="job">
-                  <h2>Facebook</h2>
-                  <h3>Senior Interface Designer</h3>
-                  <h4>2005-2007</h4>
-                  <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently
-                    implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms
-                    and top-line convergence. </p>
+                  <h2>北京邮电大学</h2>
+                  <h3>计算机学院，计算机科学与技术，本科</h3>
+                  <h4>2018.8-present</h4>
                 </div>
-
-                <div class="job">
-                  <h2>Apple Inc.</h2>
-                  <h3>Senior Interface Designer</h3>
-                  <h4>2005-2007</h4>
-                  <p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive
-                    methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas.
-                    Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits.
-                  </p>
-                </div>
-
-                <div class="job">
-                  <h2>Microsoft</h2>
-                  <h3>Principal and Creative Lead</h3>
-                  <h4>2004-2005</h4>
-                  <p>Intrinsicly transform flexible manufactured products without excellent intellectual capital.
-                    Energistically evisculate orthogonal architectures through covalent action items. Assertively
-                    incentivize sticky platforms without synergistic materials. </p>
-                </div>
-
 
                 <div class="job last">
-                  <h2>International Business Machines (IBM)</h2>
-                  <h3>Lead Web Designer</h3>
-                  <h4>2001-2004</h4>
-                  <p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow
-                    long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent
-                    e-tailers with timely e-markets.</p>
+                  <h2>中国科学院计算技术研究所</h2>
+                  <h3>量子计算与算法理论实验室，实习生</h3>
+                  <h4>2021.4-present</h4>
                 </div>
-
               </div>
-              <!--// .yui-u -->
             </div>
             <!--// .yui-gf -->
 
 
             <div class="yui-gf last">
+
               <div class="yui-u first">
-                <h2>Education</h2>
+                <h2>成绩</h2>
               </div>
+              <!--// .yui-u -->
+
               <div class="yui-u">
-                <h2>Indiana University - Bloomington, Indiana</h2>
-                <h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
+
+
+                <div class="job">
+                  <h2>全国青少年信息学奥林匹克联赛（NOIP）一等奖</h2>
+                  <h3>得分456，总分600</h3>
+                  <h4>2016.11</h4>
+                </div>
+
+
+                <div class="job">
+                  <h2>全国青少年信息学奥林匹克冬令营</h2>
+                  <h4>2017.2</h4>
+                </div>
+
+                <div class="job">
+                  <h2>全国青少年信息学奥林匹克（NOI）铜奖</h2>
+                  <h4>2017.7</h4>
+                </div>
+
+
+                <div class="job">
+                  <h2>国际大学生程序设计竞赛（ICPC）亚洲区域赛沈阳站银奖</h2>
+                  <h4>2018.10</h4>
+                </div>
+
+                <div class="job">
+                  <h2>中国大学生程序设计竞赛（CCPC）桂林站银奖</h2>
+                  <h4>2018.11</h4>
+                </div>
+
+                <div class="job">
+                  <h2>国际大学生程序设计竞赛（ICPC）亚洲区决赛银奖</h2>
+                  <h4>2018.12</h4>
+                </div>
+
+
+                <div class="job">
+                  <h2>第16次CSP认证排名第4</h2>
+                  <h4>2019.4</h4>
+                  <h3>得分435，总分500</h3>
+                </div>
+
+                <div class="job">
+                  <h2>国际大学生程序设计竞赛（ICPC）亚洲区邀请赛南昌站银奖</h2>
+                  <h4>2019.5</h4>
+                </div>
+
+                <div class="job">
+                  <h2>国际大学生程序设计竞赛（ICPC）亚洲区域赛南京站银奖</h2>
+                  <h4>2019.10</h4>
+                </div>
+
+                <div class="job">
+                  <h2>国际大学生程序设计竞赛（ICPC）亚洲区决赛银奖</h2>
+                  <h4>2019.12</h4>
+                </div>
+
+
+                <div class="job">
+                  <h2>大学生计算机系统与程序设计竞赛（CCSP）金奖（第六名）</h2>
+                  <h4>2020.10</h4>
+                </div>
+
+                <div class="job last">
+                  <h2>CCF优秀大学生奖</h2>
+                  <h4>2021.8</h4>
+                </div>
               </div>
+              <!--// .yui-u -->
             </div>
             <!--// .yui-gf -->
-
 
           </div>
           <!--// .yui-b -->
@@ -180,7 +171,7 @@
       <!--// bd -->
 
       <div id="ft">
-        <p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309
+        <p>路已人 &mdash; <a href="mailto:luyiren12@bupt.edu.cn">luyiren12@bupt.edu.cn</a> &mdash; (86) - 132-5600-3733
         </p>
       </div>
       <!--// footer -->
@@ -190,8 +181,6 @@
 
   </div>
   <!--// doc -->
-
-
 </body>
 
 </html>
