--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" type="text/css" href="reset-fonts-grids.css" media="all" />
   <link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
-  <script type="text/javascript" src="https://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
+  <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
   <script type="text/javascript">
-    $webfont.load("body", "a6fe94de39b74d618526efeca666611e", "HanaMin");
-    /*$webfont.load("#id1,.class1,h1", "a6fe94de39b74d618526efeca666611e", "HanaMin");*/
+    $webfont.load("body", "abf64f5d5f9e4b5f937e6e0686a2ffec", "HiraginoGBW3");
+    /*$webfont.load("#id1,.class1,h1", "abf64f5d5f9e4b5f937e6e0686a2ffec", "HiraginoGBW3");*/
     /*．．．*/
     $webfont.draw();
   </script>
