--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
   <script type="text/javascript">
-    $webfont.load("body", "abf64f5d5f9e4b5f937e6e0686a2ffec", "HiraginoGBW3");
-    /*$webfont.load("#id1,.class1,h1", "abf64f5d5f9e4b5f937e6e0686a2ffec", "HiraginoGBW3");*/
+    $webfont.load("body", "3b2f4230dbe04ef0a13eac38f0a418db", "SourceHanSerif-B");
+    /*$webfont.load("#id1,.class1,h1", "3b2f4230dbe04ef0a13eac38f0a418db", "SourceHanSerif-B");*/
     /*．．．*/
     $webfont.draw();
   </script>
@@ -70,13 +70,13 @@
                 <div class="job">
                   <h2>北京邮电大学</h2>
                   <h3>计算机学院，计算机科学与技术，本科</h3>
-                  <h4>2018.8-present</h4>
+                  <h4>2018.8 &mdash; present</h4>
                 </div>
 
                 <div class="job last">
                   <h2>中国科学院计算技术研究所</h2>
                   <h3>量子计算与算法理论实验室，实习生</h3>
-                  <h4>2021.4-present</h4>
+                  <h4>2021.4 &mdash; present</h4>
                 </div>
               </div>
             </div>
