--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
   <script type="text/javascript">
-    $webfont.load("body", "3b2f4230dbe04ef0a13eac38f0a418db", "SourceHanSerif-B");
-    /*$webfont.load("#id1,.class1,h1", "3b2f4230dbe04ef0a13eac38f0a418db", "SourceHanSerif-B");*/
+    $webfont.load("body", "b6b46039349e47a4a0b083b85694da65", "SourceHanS-S_B");
+    /*$webfont.load("#id1,.class1,h1", "b6b46039349e47a4a0b083b85694da65", "SourceHanS-S_B");*/
     /*．．．*/
     $webfont.draw();
   </script>
