--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     /*．．．*/
     $webfont.draw();
   </script>
+  <style>
+    h3 {
+      padding-left: 5px;
+    }
+  </style>
 </head>
 
 <body>
