--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="yui-u">
             <div class="contact-info">
               <h3><a href="https://cv.yiren.lu">cv.yiren.lu</a></h3>
-              <h3><a href="mailto:luyiren12@bupt.edu.cn">luyiren12@bupt.edu.cn</a></h3>
+              <h3><a href="mailto:luyiren12@gmail.com">luyiren12@gmail.com</a></h3>
               <h3>(86) 132-5600-3733</h3>
             </div>
             <!--// .contact-info -->
@@ -61,7 +61,7 @@
               </div>
               <div class="yui-u">
                 <p class="enlarge">
-                  北京邮电大学计科大四在读
+                  中国科学院计算机技术研究所研一在读
                 </p>
               </div>
             </div>
@@ -75,13 +75,13 @@
                 <div class="job">
                   <h2>北京邮电大学</h2>
                   <h3>计算机学院，计算机科学与技术，本科</h3>
-                  <h4>2018.8 &mdash; present</h4>
+                  <h4>2018.8 &mdash; 2022.6</h4>
                 </div>
 
                 <div class="job last">
                   <h2>中国科学院计算技术研究所</h2>
-                  <h3>量子计算与算法理论实验室，实习生</h3>
-                  <h4>2021.4 &mdash; present</h4>
+                  <h3>量子计算与算法理论实验室，研究生</h3>
+                  <h4>2022.8 &mdash; present</h4>
                 </div>
               </div>
             </div>
@@ -106,7 +106,7 @@
 
 
                 <div class="job">
-                  <h2>全国青少年信息学奥林匹克冬令营</h2>
+                  <h2>全国青少年信息学奥林匹克冬令营银牌</h2>
                   <h4>2017.2</h4>
                 </div>
 
